# SimpleMusic

./: .gitignore  README.md  pyproject.toml  run_tests.py
docs/: README.md  api-reference.md  dsl-syntax.md  examples.md  getting-started.md
simplemusic/: __init__.py  cli.py  constants.py  data_structures.py  examples.py  midi_converter.py  parser.py
tests/: __init__.py  test_library.py  test_parser.py
